--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ button:hover {
 
 /* ====== ITEM KALENDER ====== */
 .kalender-item {
-  background: #ffffff;
+  background: #e7e3e3;
   border-radius: 15px;
   box-shadow: 0 10px 25px rgba(0,0,0,0.07);
   padding: 20px;
@@ -145,9 +145,9 @@ button:hover {
 
 .kalender-item h3 {
   font-family: 'Emblema One', cursive;
-  font-size: 30px;
+  font-size: 35px;
   color: #2d89e5;
-  background: linear-gradient(135deg, #2d89e5, #64b5f6);
+  background: linear-gradient(135deg, #2d49e5, #6473f6);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   margin-bottom: 15px;
@@ -167,12 +167,16 @@ button:hover {
 }
 
 .sudah {
-  background: linear-gradient(135deg, #000000, #81C784);
+  background: linear-gradient(135deg, #00c853, #b2ff59);
+  font-size: 16px;
+  padding: 12px;
+}
+.belum {
+  background: linear-gradient(135deg, #d50000, #ff8a80);
+  font-size: 16px;
+  padding: 12px;
 }
 
-.belum {
-  background: linear-gradient(135deg, #000000, #ef5350);
-}
 
 .kalender-item button {
   width: 100%;
