--- a/rekap.html
+++ b/rekap.html
@@ -195,9 +195,85 @@ tr:hover td {
 
   h3 { font-size: 18px; }
   table { min-width: 100%; }
+}
 
-   
+/* Modal Styles */
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 999;
+      left: 0; top: 0;
+      width: 100%; height: 100%;
+      background-color: rgba(0,0,0,0.5);
+    }
 
+    .modal-content {
+      position: relative;
+      margin: 40px auto;
+      background: white;
+      width: 95%;
+      max-width: 900px;
+      height: 90%;
+      border-radius: 10px;
+      display: flex;
+      flex-direction: column;
+      overflow: hidden;
+      animation: fadeIn 0.3s ease;
+    }
+
+    .modal-header {
+      background: #2563eb;
+      color: white;
+      padding: 12px 16px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      font-size: 16px;
+    }
+
+    .close-btn {
+      background: none;
+      border: none;
+      color: white;
+      font-size: 22px;
+      cursor: pointer;
+    }
+
+    .modal-body {
+      flex: 1;
+      overflow: hidden;
+    }
+
+    iframe {
+      width: 100%;
+      height: 100%;
+      border: none;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: scale(0.95); }
+      to   { opacity: 1; transform: scale(1); }
+    }
+
+.judul-rekap {
+  display: block;
+  font-family: 'Inter', sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 1.4;
+  text-align: left;
+  color: white;
+}
+
+.judul-rekap br {
+  display: block;
+  margin-top: 2px;
+}
+
+@media (max-width: 600px) {
+  .judul-rekap {
+    font-size: 14px;
+  }
 }
 
 </style>
@@ -218,7 +294,26 @@ tr:hover td {
   <h3>Saldo Akhir: Rp <span id="saldoAkhir">0</span></h3>
 </div>
 
-<h3>💸 Riwayat Kas</h3>
+<!-- Tombol untuk buka rekap -->
+<button onclick="openModal()">Lihat Rekap Kas Siswa</button>
+
+<!-- Modal -->
+<div id="rekapModal" class="modal">
+  <div class="modal-content">
+    <div class="modal-header">
+      <span class="judul-rekap">
+        📊 Rekap Kas Siswa<br>
+        Thalhah Bin Ubaidillah
+      </span>
+      <a href="rekap.html" class="close-btn" style="text-decoration: none;">✖</a>
+    </div>
+    <div class="modal-body">
+      <iframe src="tabelkas.html"></iframe>
+    </div>
+  </div>
+</div>
+
+<h3>💸 Riwayat Pegeluaran dan Pemasukan Kas</h3>
 <div id="pengeluaranForm" class="form-container" style="display:none;">
   <input type="text" id="ketKeluar" placeholder="Keterangan">
   <input type="number" id="jumlahKeluar" placeholder="Jumlah">
@@ -275,6 +370,24 @@ tr:hover td {
 <script>
 const URL = "https://script.google.com/macros/s/AKfycbzOCzTJcSGipWHeKsvCNPNRT6WPwZRYlsKt8_TCulFxzeRzffqWcWxEKUajPuBbc7N7/exec";
 let pengeluaranData = [], pemasukanData = [], currentPage = 1, rowsPerPage = 10, currentPageMasuk = 1, rowsPerPageMasuk = 10;
+
+
+function openModal() {
+    document.getElementById("rekapModal").style.display = "block";
+  }
+
+  function closeModal() {
+    document.getElementById("rekapModal").style.display = "none";
+  }
+
+  // Tutup modal jika klik di luar kontennya
+  window.onclick = function(event) {
+    const modal = document.getElementById("rekapModal");
+    if (event.target == modal) {
+      closeModal();
+    }
+  }
+
 
 function updateLoginStatus(){
   const isAdmin = sessionStorage.getItem('isAdmin') === 'true';
