--- a/tabelkas.html
+++ b/tabelkas.html
@@ -145,7 +145,7 @@ button:hover {
     <input type="text" id="namaInput" placeholder="Ketik atau pilih nama..." oninput="filterDropdown()" onfocus="showDropdown()" autocomplete="off">
     <div id="dropdownList" class="dropdown-list"></div>
   </div>
-  <button onclick="resetFilter()">🔄 Reset Filter</button>
+  <button onclick="resetFilter()">Reset</button>
 </div>
 
 <div class="table-container">
